--- a/package.json
+++ b/package.json
@@ -1,7 +1,182 @@
 {
-  "dependencies": {
-    "dotenv": "^16.1.3",
-    "express": "^4.18.2",
-    "puppeteer": "^20.5.0"
-  }
+    "name": "job-tracker-chrome",
+    "version": "1.0.0",
+    "description": "A Chrome Extension to constantly track a job opening you've always wanted",
+    "main": "index.js",
+    "dependencies": {
+        "accepts": "^1.3.8",
+        "acorn": "^8.8.2",
+        "acorn-walk": "^8.2.0",
+        "agent-base": "^7.1.0",
+        "ansi-regex": "^5.0.1",
+        "ansi-styles": "^3.2.1",
+        "argparse": "^2.0.1",
+        "array-flatten": "^1.1.1",
+        "ast-types": "^0.13.4",
+        "base64-js": "^1.5.1",
+        "basic-ftp": "^5.0.3",
+        "bl": "^4.1.0",
+        "body-parser": "^1.20.1",
+        "buffer": "^5.7.1",
+        "buffer-crc32": "^0.2.13",
+        "bytes": "^3.1.2",
+        "call-bind": "^1.0.2",
+        "callsites": "^3.1.0",
+        "chalk": "^2.4.2",
+        "chownr": "^1.1.4",
+        "chromium-bidi": "^0.4.11",
+        "cliui": "^8.0.1",
+        "color-convert": "^1.9.3",
+        "color-name": "^1.1.3",
+        "content-disposition": "^0.5.4",
+        "content-type": "^1.0.5",
+        "cookie": "^0.5.0",
+        "cookie-signature": "^1.0.6",
+        "cosmiconfig": "^8.1.3",
+        "cross-fetch": "^3.1.6",
+        "data-uri-to-buffer": "^5.0.1",
+        "debug": "^4.3.4",
+        "deep-is": "^0.1.4",
+        "degenerator": "^4.0.2",
+        "depd": "^2.0.0",
+        "destroy": "^1.2.0",
+        "devtools-protocol": "^0.0.1120988",
+        "dotenv": "^16.1.4",
+        "ee-first": "^1.1.1",
+        "emoji-regex": "^8.0.0",
+        "encodeurl": "^1.0.2",
+        "end-of-stream": "^1.4.4",
+        "error-ex": "^1.3.2",
+        "escalade": "^3.1.1",
+        "escape-html": "^1.0.3",
+        "escape-string-regexp": "^1.0.5",
+        "escodegen": "^1.14.3",
+        "esprima": "^4.0.1",
+        "estraverse": "^4.3.0",
+        "esutils": "^2.0.3",
+        "etag": "^1.8.1",
+        "express": "^4.18.2",
+        "extract-zip": "^2.0.1",
+        "fast-levenshtein": "^2.0.6",
+        "fd-slicer": "^1.1.0",
+        "finalhandler": "^1.2.0",
+        "forwarded": "^0.2.0",
+        "fresh": "^0.5.2",
+        "fs-constants": "^1.0.0",
+        "fs-extra": "^8.1.0",
+        "function-bind": "^1.1.1",
+        "get-caller-file": "^2.0.5",
+        "get-intrinsic": "^1.2.1",
+        "get-stream": "^5.2.0",
+        "get-uri": "^6.0.1",
+        "graceful-fs": "^4.2.11",
+        "has": "^1.0.3",
+        "has-flag": "^3.0.0",
+        "has-proto": "^1.0.1",
+        "has-symbols": "^1.0.3",
+        "himalaya": "^1.1.0",
+        "http-errors": "^2.0.0",
+        "http-proxy-agent": "^7.0.0",
+        "https-proxy-agent": "^7.0.0",
+        "iconv-lite": "^0.4.24",
+        "ieee754": "^1.2.1",
+        "import-fresh": "^3.3.0",
+        "inherits": "^2.0.4",
+        "ip": "^1.1.8",
+        "ipaddr.js": "^1.9.1",
+        "is-arrayish": "^0.2.1",
+        "is-fullwidth-code-point": "^3.0.0",
+        "js-tokens": "^4.0.0",
+        "js-yaml": "^4.1.0",
+        "json-parse-even-better-errors": "^2.3.1",
+        "jsonfile": "^4.0.0",
+        "levn": "^0.3.0",
+        "lines-and-columns": "^1.2.4",
+        "lru-cache": "^7.18.3",
+        "media-typer": "^0.3.0",
+        "merge-descriptors": "^1.0.1",
+        "methods": "^1.1.2",
+        "mime": "^1.6.0",
+        "mime-db": "^1.52.0",
+        "mime-types": "^2.1.35",
+        "mitt": "^3.0.0",
+        "mkdirp-classic": "^0.5.3",
+        "mongoose": "^7.2.2",
+        "ms": "^2.1.2",
+        "negotiator": "^0.6.3",
+        "netmask": "^2.0.2",
+        "node-fetch": "^2.6.11",
+        "object-inspect": "^1.12.3",
+        "on-finished": "^2.4.1",
+        "once": "^1.4.0",
+        "optionator": "^0.8.3",
+        "pac-proxy-agent": "^6.0.3",
+        "pac-resolver": "^6.0.1",
+        "parent-module": "^1.0.1",
+        "parse-json": "^5.2.0",
+        "parseurl": "^1.3.3",
+        "path-to-regexp": "^0.1.7",
+        "path-type": "^4.0.0",
+        "pend": "^1.2.0",
+        "prelude-ls": "^1.1.2",
+        "progress": "^2.0.3",
+        "proxy-addr": "^2.0.7",
+        "proxy-agent": "^6.2.1",
+        "proxy-from-env": "^1.1.0",
+        "pump": "^3.0.0",
+        "puppeteer": "^20.5.0",
+        "puppeteer-core": "^20.5.0",
+        "qs": "^6.11.0",
+        "range-parser": "^1.2.1",
+        "raw-body": "^2.5.1",
+        "readable-stream": "^3.6.2",
+        "require-directory": "^2.1.1",
+        "resolve-from": "^4.0.0",
+        "safe-buffer": "^5.2.1",
+        "safer-buffer": "^2.1.2",
+        "send": "^0.18.0",
+        "serve-static": "^1.15.0",
+        "setprototypeof": "^1.2.0",
+        "side-channel": "^1.0.4",
+        "smart-buffer": "^4.2.0",
+        "socks": "^2.7.1",
+        "socks-proxy-agent": "^8.0.1",
+        "source-map": "^0.6.1",
+        "statuses": "^2.0.1",
+        "string_decoder": "^1.3.0",
+        "string-width": "^4.2.3",
+        "strip-ansi": "^6.0.1",
+        "supports-color": "^5.5.0",
+        "tar-fs": "^2.1.1",
+        "tar-stream": "^2.2.0",
+        "through": "^2.3.8",
+        "toidentifier": "^1.0.1",
+        "tr46": "^0.0.3",
+        "tslib": "^2.5.3",
+        "type-check": "^0.3.2",
+        "type-is": "^1.6.18",
+        "unbzip2-stream": "^1.4.3",
+        "universalify": "^0.1.2",
+        "unpipe": "^1.0.0",
+        "util-deprecate": "^1.0.2",
+        "utils-merge": "^1.0.1",
+        "vary": "^1.1.2",
+        "vm2": "^3.9.19",
+        "webidl-conversions": "^3.0.1",
+        "whatwg-url": "^5.0.0",
+        "word-wrap": "^1.2.3",
+        "wrap-ansi": "^7.0.0",
+        "wrappy": "^1.0.2",
+        "ws": "^8.13.0",
+        "y18n": "^5.0.8",
+        "yargs": "^17.7.1",
+        "yargs-parser": "^21.1.1",
+        "yauzl": "^2.10.0"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js"
+    },
+    "author": "Long Tran",
+    "license": "ISC"
 }
