--- a/package.json
+++ b/package.json
@@ -175,7 +175,7 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js"
+        "start": "nodemon index.js"
     },
     "author": "Long Tran",
     "license": "ISC"
